# Learning-Rust

./: .gitignore  Cargo.toml  README.md
MyProjects/AdventOfCode/Day1/src/: main.rs
MyProjects/coordinate_frames/: Cargo.toml
MyProjects/coordinate_frames/src/: main.rs
WebsiteTutorials/GettingStarted/Hello_World/: Cargo.toml  main.rs
WebsiteTutorials/GuessGame/: Cargo.toml
WebsiteTutorials/GuessGame/src/: main.rs
WebsiteTutorials/variables/src/: main.rs
