[workspace]
members = [
    "WebsiteTutorials/GettingStarted/hello_cargo",
    "WebsiteTutorials/GettingStarted/Hello_World",
    "WebsiteTutorials/GuessGame",
    "WebsiteTutorials/variables",
    "MyProjects/AdventOfCode/Day1",
    "MyProjects/coordinate_frames",
]

[profile.release]
codegen-units = 1
debug = true
lto = true 